Внести корректировки согласно ревью по ТЗ-7